fix: r-overflow-hidden css required by useLockScroll

--- a/src/components/styles/index.less
+++ b/src/components/styles/index.less
@@ -14,6 +14,10 @@
 body {
   // background-color: @r-body-background;
   font-size: @font-size-base;
+
+  &.r-overflow-hidden {
+    overflow: hidden !important;
+  }
 }
 
 *[contenteditable] {
